--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -12,15 +12,35 @@ link: asteroid-belt
                 <h2 class="paragraphheader" id="DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</h2>
                 <p class="paragraph">
                     In 1596, Johannes Kepler assumed that there must be a planet between Mars and Jupiter, due to the gap between the planets. 
-                    Three centuries later, in 1801, the first asteroid was discovered. 
-                    It was named <a href="ceres.html">Ceres</a> after the Roman goddess of harvest.
+                    He stated that it was "God's design" for the distance between planets to follow a mathematical progression.
+                    Based on this observation, Johann Daniel Titius and later Johann Elert Bode in 1772 derived the Titius-Bode law, which was an attempt to predict the location of new planets.
+                    It yielded a result in 1781, when William Herschel discovered <a href="uranus.html">Uranus</a> beyond the orbit of <a href="saturn.html">Saturn</a>.
+                    Later, Franz Xaver von Zach and 24 more astronomers organized the United Astronomical Society (dubbed the "celestial police"), originally tasked with compiling more precise <a href="star.html">star</a> catalogues, but later began an organized search for the mysterious planet.
+                    Three years after their first congress, in 1801, Giuseppe Piazzi discovered <a href="ceres.html">Ceres</a> at the observatory in Palermo.
                 </p>
                 <p class="paragraph">
-                    Soon, other objects were discovered - Pallas, Juno, <a href="vesta.html">Vesta</a>, and Astraea. 
-                    Scientists decided to classify the objects separately from the planets, calling them "asteroids" instead.
+                    After other members of the "celestial police" discovered other "planets" like Pallas, Juno, and <a href="vesta.html">Vesta</a>, they started to suspect that they were not planets, but a new class of objects.
+                    Herschel suggested the term "asteroid" (star-like), since their apparent sizes were smaller than those of stars.
+                    Titius-Bode law was later disproven by the discovery of <a href="neptune.html">Neptune</a>.
                 </p>
                 <p class="paragraph">
                     Today, there are over half a million discovered asteroids, many of which are located in the belt.
+                </p>
+                <h2 class="paragraphheader" id="Groups">Groups</h2>
+                <p class="paragraph">
+                    The inner main belt asteroids are located within the Kirkwood gap that corresponds with 3:1 orbital resonance with Jupiter.
+                    The largest members are Vesta, Fortuna, and Iris.
+                </p>
+                <p class="paragraph">
+                    The intermediate main belt is located between the gaps corresponding to 3:1 and 5:2 resonances.
+                    The largest members are Ceres, Pallas, and Eunomia.
+                </p>
+                <p class="paragraph">
+                    The outer main belt is the region outside the 5:2 orbital resonance.
+                    The largest members are Hygiea, Interamnia, and Europa.
+                </p>
+                <p class="paragraph">
+                    There are also a few groups within the belt that are resonant with Jupiter, notably the Alinda and Griqua groups.
                 </p>
                 <h2 class="paragraphheader" id="AsteroidsOfTheAsteroidBelt">Asteroids in the asteroid belt</h2>
                 <p class="paragraph">This is a list of the largest asteroids in the asteroid belt.</p>
@@ -73,7 +93,7 @@ link: asteroid-belt
                         It is the biggest of the asteroids in the asteroid belt and is the only such one to be a <a href="dwarf-planet.html">dwarf planet</a>. 
                         It is named after the Roman goddess of agriculture and fertility. 
                         The surface of the asteroid consists of ice and carbonates. 
-                        Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.
+                        Cryovolcanic activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single cryovolcanic mountain (Ahuna Mons) exist.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -87,9 +107,25 @@ link: asteroid-belt
                         Vesta is the second biggest asteroid in the asteroid belt. 
                         It is named after the Roman goddess of the home and family. 
                         Vesta's shape is close to an oblate spheroid, but is not a dwarf planet, because it is not in hydrostatic equilibrium.
+                        It is believed that Vesta used to be in hydrostatic equilibrium and still has differentiated internal structure, but lost its round shape.
+                        A recognisable feature is the Rheasilva crater, which has left a mountain that is almost as tall as Olympus Mons on Mars.
                     </p>
                 </div>
-                <h3 class="paragraphsubheader"></h3>
+                <h3 class="paragraphsubheader" id="Pallas">Pallas</h3>
+                <p class="paragraph">
+                    Pallas is the third biggest asteroid in the asteroid belt and the second to be discovered after Ceres.
+                    It is named after another name for Athens, the Greek goddess of war.
+                    It has a high inclination of 34.8°.
+                    Just like Vesta, it is almost round.
+                    So far, it hasn't been visited by a probe.
+                </p>
+                <h3 class="paragraphsubheader" id="Hygiea">Hygiea</h3>
+                <p class="paragraph">
+                    Hygiea is the fourth biggest asteroid in the asteroid belt.
+                    It is named after the Greek goddess of health and medicine.
+                    Just like Vesta and Pallas, it is almost round.
+                    So far, it hasn't been visited by a probe.
+                </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
