--- a/pages/callisto.html
+++ b/pages/callisto.html
@@ -28,8 +28,8 @@ link: callisto
                 <p class="paragraph">
                     Callisto is named after the mythological Greek figure of the same name.
                     She is a nymph that was a follower of Artemis, but attracted the attention of Zeus, who impregnated her while disguised as Artemis.
-                    Callisto was then expelled from the Artemis' group, turned into a bear by Hera (or Artemis in other versions), and saved from getting killed by her hunter son by Zeus, who set her among the stars as the Ursa Major constellation.
-                    The theme of naming the moons after Zeus' lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
+                    Callisto was then expelled from the Artemis's group, turned into a bear by Hera (or Artemis in other versions), and saved from getting killed by her hunter son by Zeus, who set her among the stars as the Ursa Major constellation.
+                    The theme of naming the moons after Zeus's lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
                     The names weren't accepted initially until the discovery of the <a href="satellites-of-saturn.html">moons</a> of <a href="saturn.html">Saturn</a>.
                     Before that, the four Galilean moons were refered to as Jupiter I through IV in order from closest to furthest (Callisto was Jupiter IV).
                 </p>
