--- a/pages/ceres.html
+++ b/pages/ceres.html
@@ -7,7 +7,7 @@ link: ceres
 
                 <div class="articlediv">
                     <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="240" height="240">
+                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="245" height="240">
                         <p class="caption">Ceres</p>
                     </div>
                     <p class="paragraph">
@@ -15,7 +15,7 @@ link: ceres
                         It is named after the Roman goddess of agriculture and fertility. 
                         It was discovered in 1801 and was thought to be a <a href="planet.html">planet</a>, before other smaller bodies like Pallas, Juno, and <a href="vesta.html">Vesta</a> were discovered.
                         The surface of the asteroid consists of ice and carbonates. 
-                        Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.
+                        Cryovolcanic activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single cryovolcanic mountain (Ahuna Mons) exist.
                     </p>
                     <p class="paragraph">
                         It has been visited by the Dawn probe, which has also explored the second biggest asteroid, Vesta.
@@ -24,7 +24,7 @@ link: ceres
                 <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
                     Ceres is named after the goddess of fertility in Roman mythology, as it is the tradition for other planets.
-                    Franz Xaver von Zach and Johann Elert Bode refered to the planet as Hera and Juno, the Greeka and Roman queen of the gods respectively.
+                    Franz Xaver von Zach and Johann Elert Bode refered to the planet as Hera and Juno, the Greek and Roman queen of the gods respectively.
                     For a while, this name stuck in Germanic-speaking states, though astronomer Karl Harding discovered another asteroid, now bearing the name Juno, and the name the discoverer Giuseppe Piazzi chose stuck
                 </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
@@ -37,7 +37,7 @@ link: ceres
                     Three years after their first congress, in 1801, Giuseppe Piazzi discovered Ceres at the observatory in Palermo.
                 </p>
                 <p class="paragraph">
-                    After other members of the "celestial police" discovered other "planets" like Pallas, Juno, and Vesta, they started to suspect that Ceres was not a planet, but a new class of objects.
+                    After other members of the "celestial police" discovered other "planets" like Pallas, Juno, and Vesta, they started to suspect that Ceres was not a planet, but a part of a new class of objects.
                     Herschel suggested the term "asteroid" (star-like), since their apparent sizes were smaller than those of stars.
                     Titius-Bode law was later disproven by the discovery of <a href="neptune.html">Neptune</a>.
                 </p>
