--- a/pages/europa.html
+++ b/pages/europa.html
@@ -25,7 +25,7 @@ link: europa
                     The name Europa comes from the Greek mythological character of Phoenician origin.
                     The story tells that Zeus disguised as a bull in her father's herd, so he can abduct her.
                     When he rode with her all the way to Crete, he made Europa queen of the island.
-                    The theme of naming the moons after Zeus' lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
+                    The theme of naming the moons after Zeus's lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
                     The names weren't accepted initially until the discovery of the <a href="satellites-of-saturn.html">moons</a> of <a href="saturn.html">Saturn</a>.
                     Before that, the four Galilean moons were refered to as Jupiter I through IV in order from closest to furthest (Europa was Jupiter II).
                 </p>
