--- a/pages/ganymede.html
+++ b/pages/ganymede.html
@@ -26,7 +26,7 @@ link: ganymede
                 <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
                     Ganymede is named after the mythological Trojan prince who was abducted by Zeus to serve as the cup-bearer of the gods. 
-                    The theme of naming the moons after Zeus' lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
+                    The theme of naming the moons after Zeus's lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
                     Previous proposals were naming the moon after a member of the Medici family and "Jupiter of Jupiter". 
                     The names weren't accepted initially until the discovery of the <a href="satellites-of-saturn.html">moons</a> of <a href="saturn.html">Saturn</a>.
                     Before that, the four Galilean moons were refered to as Jupiter I through IV in order from closest to furthest (Ganymede was Jupiter III).
