--- a/pages/io.html
+++ b/pages/io.html
@@ -26,7 +26,7 @@ link: io
                 <p class="paragraph">
                     Io is named after the mythological priestess of Hera who was one of the lovers of Zeus.
                     After he raped Io, he then turned her into a heifer in order to hide her from his wife Hera.
-                    The theme of naming the moons after Zeus' lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
+                    The theme of naming the moons after Zeus's lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
                     The names weren't accepted initially until the discovery of the <a href="satellites-of-saturn.html">moons</a> of <a href="saturn.html">Saturn</a>.
                     Before that, the four Galilean moons were refered to as Jupiter I through IV in order from closest to furthest (Io was Jupiter I).
                 </p>
