--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -35,7 +35,7 @@ link: mercury
                     The planet was known since ancient times and had different names as a morning and an evening star.
                     The ancient Greeks had realised that the two are a single object.
                     It was named after Hermes, the swift-footed messenger god, for it's fast movement across the sky.
-                    The Romans gave it the name "Mercurius", which is the name of Hermes' analogue in Roman mythology.
+                    The Romans gave it the name "Mercurius", which is the name of Hermes's analogue in Roman mythology.
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
