--- a/pages/venus.html
+++ b/pages/venus.html
@@ -69,7 +69,7 @@ link: venus
                 <p class="paragraph">
                     Venus is a terrestrial planet like <a href="mercury.html">Mercury</a>, <a href="earth.html">Earth</a> and <a href="mars.html">Mars</a>.
                     The diameter of Venus is 12,103.6 km - only 638.4 km less than Earth's.
-                    Venus' mass is 81.5% that of Earth's.
+                    Venus's mass is 81.5% that of Earth's.
                     Because of these similarities, it is sometimes described as Earth's twin planet.
                 </p>
                 <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
@@ -121,7 +121,7 @@ link: venus
                 <p class="paragraph">
                     The planet is shrouded in sulfuric acid.
                     These clouds make it impossible for observation of the surface without the help of advanced instruments.
-                    Venus' albedo is also high, due to the clouds.
+                    Venus's albedo is also high, due to the clouds.
                 </p>
                 <h2 class="paragraphheader" id="EarlyObservation">Early observation</h2>
                 <p class="paragraph">
